# AdventOfCode

./: .gitignore  pyproject.toml
AdventOfCode/day_1/: main.py  part_1.py  part_2.py  test.py
AdventOfCode/day_2/: main.py  test.py
day_1/: lookup.py  test.py
