[tool.poetry]
name = "adventofcode2024"
version = "0.1.0"
description = ""
authors = ["Santiago Vargas de Kruijf <santiago.vdk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
